{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 627,
  "lineage": "a118e78b-8ca0-f658-f126-579eb5b3cc57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cf59bc9978eb266",
            "arn": "arn:aws:ec2:eu-central-1:447083925443:instance/i-06778582f561df509",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06778582f561df509",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-096d1478bc5801d00"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096d1478bc5801d00",
            "private_dns": "ip-10-0-0-71.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.71",
            "public_ip": "3.79.96.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ec8d1fe1659948c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bdae3f76966f14d",
            "tags": {
              "Name": "zsch-ec2-0"
            },
            "tags_all": {
              "Name": "zsch-ec2-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c44619b583fe1cc8"
            ]
          },
          "dependencies": [
            "aws_network_interface.demo_eni",
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cf59bc9978eb266",
            "arn": "arn:aws:ec2:eu-central-1:447083925443:instance/i-0120d30e5a604e111",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0120d30e5a604e111",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-054b5e3ae44ac94a7"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054b5e3ae44ac94a7",
            "private_dns": "ip-10-0-0-129.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.129",
            "public_ip": "18.196.112.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dee58c549b37024d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bdae3f76966f14d",
            "tags": {
              "Name": "zsch-ec2-1"
            },
            "tags_all": {
              "Name": "zsch-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c44619b583fe1cc8"
            ]
          },
          "dependencies": [
            "aws_network_interface.demo_eni",
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:internet-gateway/igw-0e4417f15b68023f0",
            "id": "igw-0e4417f15b68023f0",
            "owner_id": "447083925443",
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:loadbalancer/app/zsch-alb/7b954ad3661ad6b8",
            "arn_suffix": "app/zsch-alb/7b954ad3661ad6b8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zsch-alb-1715446036.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:loadbalancer/app/zsch-alb/7b954ad3661ad6b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zsch-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a411928cbc7e52d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05225105f4a9b85ee"
              },
              {
                "subnet_id": "subnet-06bdae3f76966f14d"
              }
            ],
            "subnets": [
              "subnet-05225105f4a9b85ee",
              "subnet-06bdae3f76966f14d"
            ],
            "vpc_id": "vpc-0f562c2f6deb3505b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_subnet.demo_subnet_1b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:listener/app/zsch-alb/7b954ad3661ad6b8/5962ca361d81ec2c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:listener/app/zsch-alb/7b954ad3661ad6b8/5962ca361d81ec2c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:loadbalancer/app/zsch-alb/7b954ad3661ad6b8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_alb",
            "aws_lb_target_group.demo_alb_app_tg",
            "aws_security_group.demo_alb_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_subnet.demo_subnet_1b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo_alb_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
            "arn_suffix": "targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:447083925443:loadbalancer/app/zsch-alb/7b954ad3661ad6b8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zsch-alb-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "demo_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260-20240612202136326100000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
            "target_id": "10.0.0.71"
          },
          "dependencies": [
            "aws_instance.demo_ec2",
            "aws_lb_target_group.demo_alb_app_tg",
            "aws_network_interface.demo_eni",
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "demo_tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260-20240612202146302600000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:447083925443:targetgroup/zsch-alb-app-tg/7bd2a233e9e58260",
            "target_id": "10.0.0.129"
          },
          "dependencies": [
            "aws_instance.demo_ec2",
            "aws_lb_target_group.demo_alb_app_tg",
            "aws_network_interface.demo_eni",
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "demo_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:network-interface/eni-096d1478bc5801d00",
            "id": "eni-096d1478bc5801d00",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e6:05:62:c4:45",
            "owner_id": "447083925443",
            "private_ip": "10.0.0.71",
            "private_ip_list": [
              "10.0.0.71"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.71"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c44619b583fe1cc8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bdae3f76966f14d",
            "tags": {
              "Name": "zsch-primary-eni-0"
            },
            "tags_all": {
              "Name": "zsch-primary-eni-0"
            }
          },
          "dependencies": [
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:network-interface/eni-054b5e3ae44ac94a7",
            "id": "eni-054b5e3ae44ac94a7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:11:1f:36:86:05",
            "owner_id": "447083925443",
            "private_ip": "10.0.0.129",
            "private_ip_list": [
              "10.0.0.129"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.129"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c44619b583fe1cc8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bdae3f76966f14d",
            "tags": {
              "Name": "zsch-primary-eni-1"
            },
            "tags_all": {
              "Name": "zsch-primary-eni-1"
            }
          },
          "dependencies": [
            "aws_security_group.demo_app_sg",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:route-table/rtb-01a57b9b5a2fd3f50",
            "id": "rtb-01a57b9b5a2fd3f50",
            "owner_id": "447083925443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4417f15b68023f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_route_table_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081af816a48877827",
            "route_table_id": "rtb-01a57b9b5a2fd3f50",
            "subnet_id": "subnet-06bdae3f76966f14d"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.demo_route_table",
            "aws_subnet.demo_subnet_1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_route_table_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ccc03af1d21394a",
            "route_table_id": "rtb-01a57b9b5a2fd3f50",
            "subnet_id": "subnet-05225105f4a9b85ee"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.demo_route_table",
            "aws_subnet.demo_subnet_1b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group/sg-0a411928cbc7e52d5",
            "description": "SG for external ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a411928cbc7e52d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zsch-alb-sg",
            "name_prefix": "",
            "owner_id": "447083925443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zsch-alb-sg"
            },
            "tags_all": {
              "Name": "zsch-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group/sg-0c44619b583fe1cc8",
            "description": "SG for our app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c44619b583fe1cc8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a411928cbc7e52d5"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "zsch-app-sg",
            "name_prefix": "",
            "owner_id": "447083925443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zsch-app-sg"
            },
            "tags_all": {
              "Name": "zsch-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:subnet/subnet-06bdae3f76966f14d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bdae3f76966f14d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447083925443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zsch-subnet-1a"
            },
            "tags_all": {
              "Name": "zsch-subnet-1a"
            },
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:subnet/subnet-05225105f4a9b85ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05225105f4a9b85ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447083925443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zsch-subnet-1b"
            },
            "tags_all": {
              "Name": "zsch-subnet-1b"
            },
            "vpc_id": "vpc-0f562c2f6deb3505b"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:vpc/vpc-0f562c2f6deb3505b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4c4b52be4ff495f",
            "default_route_table_id": "rtb-08b944d6e1965314a",
            "default_security_group_id": "sg-02a54277d1a7da4f4",
            "dhcp_options_id": "dopt-062ac6b0b4fc34040",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f562c2f6deb3505b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b944d6e1965314a",
            "owner_id": "447083925443",
            "tags": {
              "Name": "zsch-vpc"
            },
            "tags_all": {
              "Name": "zsch-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "demo_alb_sg_allow_all_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-07084baf78c663756",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07084baf78c663756",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a411928cbc7e52d5",
            "security_group_rule_id": "sgr-07084baf78c663756",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "demo_alb_sg_allow_all_egress_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-0613f116a32e0df5c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0613f116a32e0df5c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a411928cbc7e52d5",
            "security_group_rule_id": "sgr-0613f116a32e0df5c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "demo_app_sg_allow_all_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-02d1743e22bb98b4d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02d1743e22bb98b4d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c44619b583fe1cc8",
            "security_group_rule_id": "sgr-02d1743e22bb98b4d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_app_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "demo_app_sg_allow_all_egress_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-02400c808e4e9866f",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-02400c808e4e9866f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c44619b583fe1cc8",
            "security_group_rule_id": "sgr-02400c808e4e9866f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_app_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "demo_alb_sg_allow_ingress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-02f031f940b40f4f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02f031f940b40f4f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a411928cbc7e52d5",
            "security_group_rule_id": "sgr-02f031f940b40f4f2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "demo_alb_sg_allow_ingress_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-08d98bc2a3bda496f",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-08d98bc2a3bda496f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a411928cbc7e52d5",
            "security_group_rule_id": "sgr-08d98bc2a3bda496f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "demo_app_sg_allow_traffic_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:447083925443:security-group-rule/sgr-03fb2caddc3c01743",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-03fb2caddc3c01743",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a411928cbc7e52d5",
            "security_group_id": "sg-0c44619b583fe1cc8",
            "security_group_rule_id": "sgr-03fb2caddc3c01743",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_alb_sg",
            "aws_security_group.demo_app_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    }
  ]
}